--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
       "preview": "vite preview"
    },
    "dependencies": {
+      "@remixicon/react": "^4.2.0",
       "axios": "^1.7.2",
       "json-server": "^1.0.0-beta.1",
       "react": "^18.3.1",
       "react-dom": "^18.3.1",
-      "react-router-dom": "^6.24.0"
+      "react-router-dom": "^6.24.0",
+      "remixicon": "^4.3.0"
    },
    "devDependencies": {
       "@types/react": "^18.3.3",
